--- a/03-class/khanAcademy/main.css
+++ b/03-class/khanAcademy/main.css
@@ -18,6 +18,9 @@
   input, button, textarea, select {
     font: inherit;
   }
+  h1, h2, h3, h4 {
+    line-height: 1.2;
+  }
   p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
   }
@@ -27,10 +30,8 @@
   ol, ul {
     list-style: none;
     padding: 0;
+    margin: 0;
   }
-
-
-
 
 
 
@@ -47,9 +48,62 @@
 /*main css*/
 
 
-.flex {
-    display: flex;
-    justify-content: space-around;
+main, nav {
+  max-width: 1200px;
+  margin-inline: auto;
 }
 
 
+.flex {
+    display: flex;
+}
+
+.flex-sbt {
+    justify-content: space-between;
+}
+
+
+.hero {
+  margin-top: 50px;
+}
+
+
+.hero-img {
+  margin-inline-start: 20px;
+}
+
+.hero-heading, .hero-para {
+  margin-bottom: 16px;
+}
+
+.hero-para {
+  max-width: 50ch;
+}
+
+
+.hero-ul li a {
+  color: inherit;
+  text-decoration: none;
+}
+
+
+
+.hero-ul li {
+  background-color: rgb(35, 112, 255);
+  border-radius: 5px;
+  flex: 1;
+  padding: 4px 5px;
+  margin-inline-end: 5px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+}
+
+.flex-c {
+  align-items: center;
+}
+
+.section-2 {
+  text-align: center;
+  margin-top: 150px;
+
+}
