Reset List stylings

--- a/03-class/techCrunch/main.css
+++ b/03-class/techCrunch/main.css
@@ -24,8 +24,21 @@
   #root, #__next {
     isolation: isolate;
   }
+  ol, ul, li {
+
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+  }
+  ol, ul {
+    list-style: none;
+  }
 
 
 /*above css is reset*/
 
 /*main css is below*/
+
