--- a/03-class/techCrunch/main.css
+++ b/03-class/techCrunch/main.css
@@ -11,6 +11,9 @@
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
   }
+  h1, h2, h3, h4 {
+    line-height: 1.2;
+  }
   img, picture, video, canvas, svg {
     display: block;
     max-width: 100%;
@@ -42,3 +45,28 @@
 
 /*main css is below*/
 
+input {
+  width: 100% 
+}
+
+.flex {
+  display: flex;
+}
+
+
+.main-middle {
+  min-width: 50%;
+}
+
+.margin-inline-main {
+  margin-inline: 12px;
+}
+
+.hero-img {
+  height: 300px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
