--- a/08-class/homework/level-ground/main.css
+++ b/08-class/homework/level-ground/main.css
@@ -22,11 +22,19 @@ body {
 /******************************************
 /* LAYOUT
 /*******************************************/
-header {
+.bg-dark {
+  color: #f4f1f0;
+  background-color: hsl(212, 15%, 47%);
+}
+
+.bg-lite {
+  color: #172127;
+  background-color: #dbdfe2;
 
 }
 
 footer {
+  background-color: #172127;
 
 }
 
