--- a/08-class/homework/source/main.css
+++ b/08-class/homework/source/main.css
@@ -16,6 +16,10 @@ ul {
 }
 
 
+
+
+
+
 /******************************************
 /* BASE STYLES
 /*******************************************/
@@ -53,7 +57,6 @@ nav {
 .flex-c {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 /******************************************
@@ -61,7 +64,6 @@ nav {
 /*******************************************/
 .flex {
   display: flex;
-
 }
 
 .align-items-b {
@@ -83,7 +85,6 @@ nav {
 
 
 .logo-wrapper {
-  font-size: 32px;
   font-weight: bold;
 }
 
@@ -102,6 +103,7 @@ nav {
 
 .main-right, .main-left {
   flex-basis: 50%;
+  flex-grow: 1;
 }
 
 img {
@@ -126,11 +128,82 @@ img {
   gap: 32px;
 }
 
-.section-info {
-  max-width: 400px;
+.wrapper-info {
+  width: 100%;
+}
+
+.info {
+  max-width: 50ch;
   padding: 60px 0;
 }
 
 h1, h2 {
-  font-size: 32px;
+  font-size: 2rem;
+}
+
+.logo-wrapper {
+  font-size: 1.8rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+.m-auto {
+  margin-inline: auto;
+}
+
+
+
+/******************************************
+/* MEDIA QUERIES
+/*******************************************/
+
+
+
+@media screen and (max-width: 700px) {
+
+  .flex {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    
+  }
+  .nav-list, .btn-nav {
+    display: none;
+  
+  }
+  .padding-left {
+    padding-left: 0;
+  }
+
+
+  .mega-wrapper {
+    padding-inline: 24px;
+  }
+
+* {
+    width: 100%;
+  }
+
+
+.logo-wrapper {
+  width: fit-content;
+  align-self: center;
+
+}
+
+html {
+  font-size: 18px;
+}
+
+
+.wrapper-features div {
+  border-bottom: 2px solid grey;
+}
+
 }
