--- a/10-class/10-homework/restaurant/css/mynormreset.css
+++ b/10-class/10-homework/restaurant/css/mynormreset.css
@@ -1,7 +1,3 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
-
-
 /* Box Model Hack */
 *,
 *::before,
@@ -10,9 +6,7 @@
 }
 
 
-
-
-/**
+/*
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
@@ -24,15 +18,82 @@ html {
   /* 2 */
 }
 
-/**
- * Remove the margin in all browsers.
- */
 
+/* Remove the margin in all browsers. */
+/* Set core body defaults */
 body {
   margin: unset;
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
 }
+
+
+/* Make media elements easier to work with */
+img,
+picture,
+video,
+svg,
+canvas {
+  display: block;
+  max-inline-size: 100%;
+  block-size: auto;
+}
+
+
+/* Balance text wrapping on headings */
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
+
+
+/* Remove default margin in favour of better control in authored CSS */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block-end: 0;
+}
+
+
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* Set shorter line heights on headings and interactive elements */
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
+  line-height: 1.1;
+}
+
+
+
+
+#root,
+#__next {
+  isolation: isolate;
+}
+
 
 /**
  * Render the `main` element consistently in IE.
@@ -41,6 +102,14 @@ body {
 main {
   display: block;
 }
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
 
 
 
@@ -156,16 +225,6 @@ img {
 }
 
 
-img,
-picture,
-video,
-svg,
-canvas {
-  display: block;
-  max-inline-size: 100%;
-  block-size: auto;
-}
-
 
 
 /**
@@ -184,6 +243,22 @@ label {
   margin: 0;
   /* 2 */
 }
+
+
+/* Clear fix hack */
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+.clear {
+  clear: both;
+}
+
 
 
 /**
@@ -378,41 +453,4 @@ template {
 
 [hidden] {
   display: none;
-}
-
-
-
-h1,
-h2,
-h3,
-h4 {
-  text-wrap: balance;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin-block-end: 0;
-}
-
-
-
-/* If you're adding class to lists, you're probably doing something fancy. 
-*/
-ul[class],
-ol[class] {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-#root, #__next {
-  isolation: isolate;
 }
