Add spacing using flow class

--- a/10-class/10-homework/restaurant/css/main.css
+++ b/10-class/10-homework/restaurant/css/main.css
@@ -203,6 +203,12 @@
 }
 
 
+:where(.flow > :not(:first-child)) {
+     padding-top: var(--flow-spacer, 10em);
+     outline: 1px solid red;
+}
+
+
 /******************************************
 /* BASE STYLES
 /*******************************************/
@@ -229,7 +235,9 @@ a {
 /******************************************
 /* LAYOUT
 /*******************************************/
-
+.open--days {
+     justify-content: space-around;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
