--- a/10-class/10-homework/restaurant/css/mynormreset.css
+++ b/10-class/10-homework/restaurant/css/mynormreset.css
@@ -67,8 +67,8 @@ dd {
 
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+:is(ul[role='list'],
+  ol[role='list']) {
   list-style: none;
   margin: 0;
   padding: 0;
