--- a/10-class/10-homework/restaurant/css/mynormreset.css
+++ b/10-class/10-homework/restaurant/css/mynormreset.css
@@ -67,7 +67,7 @@ dd {
 
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-:is(ul[role='list'],
+:where(ul[role='list'],
   ol[role='list']) {
   list-style: none;
   margin: 0;
